# lex

./: .gitignore  DEV.md  LICENSE  README.md  download-db.sh  indexer.py  lex.py  manifest.json  pyproject.toml  requirements.txt  setup.sh
docs/: BIBLE_EDITION_STANDARD.md  DEVELOPER_GUIDE.md  ENCYCLOPEDIA_IMPORT_NOTES.md  LICENSING.md  USER_GUIDE.md
docs/components/: BIBLE_DB_BUILDER.md  DATA_STORES.md  ENCYCLOPEDIA_IMPORTER.md  LEX_CLI.md
runtime-data/: creeds.db  naves.db  places.db  strongs.db
runtime-data/theolog-ai/data/biblical-languages/stepbible-lexicons/: tbesh-hebrew.json
runtime-data/theolog-ai/data/historical-documents/: 39-articles.json  apostles-creed.json  athanasian-creed.json  augsburg-confession.json  baltimore-catechism.json  belgic-confession.json  canons-of-dort.json  chalcedonian-definition.json  confession-of-dositheus.json  council-of-trent.json  heidelberg-catechism.json  london-baptist-1689.json  nicene-creed.json  philaret-catechism.json  westminster-confession.json  westminster-larger-catechism.json  westminster-shorter-catechism.json
scripts/: build_encyclopedia_db.py  build_esv_bible_db.sh  build_windows.sh  generate_manifest.py  package_bible.py  split_lexicon_db.py
